added drop-down nav on hover in mobile screens

--- a/html/index.html
+++ b/html/index.html
@@ -42,8 +42,8 @@
           <h1>Der Alpaka-Hof</h1>
           <!-- Navigation -->
           <nav class="nav">
+            <div class="drop-down-btn" href="#">Navigation</div>
             <ul class="drop-down-menu">
-              <div class="drop-down-btn" href="#"></div>
               <!--dropdown toggle for later use-->
               <li class="drop-down-item"><a href="#about">über uns</a></li>
               <li class="drop-down-item"><a href="#farm-gallery">hof</a></li>
