--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
           <!-- Alpaca Logo -->
           <img src="/assets/images/logo/alpaca.svg" alt="alpaca-logo" />
           <!-- H1 -->
-          <h1>Der Alpaka-Hof</h1>
+          <h1 id="top">Der Alpaka-Hof</h1>
           <!-- Navigation -->
           <nav class="nav">
             <div class="drop-down-btn" href="#">Navigation</div>
@@ -383,6 +383,10 @@
           <button class="btn" type="submit">Senden...</button>
         </form>
         <!-- Form End -->
+        <!-- To-Top Button -->
+        <div class="to-top">
+          <a href="#top"></a>
+        </div>
       </div>
       <!-- Contact END -->
 
